--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Mads Website</title>
 </head>
 <body>
-    <p> Hellooooooo</p>
+    <h1>Welcome to Maddys First Website</h1>Hellooooooo</p>
 </body>
 </html>
