--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/xdh7eqw.css">
     <title>Mads Website</title>
 </head>
 <body>
-    <h1>Welcome to Maddys First Website</h1>Hellooooooo</p>
-</body>
+    <h1>Welcome to Maddys First Website</h1>
+
 </html>
