--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 </head>
 <body>
     <h1>Welcome to Maddys First Website</h1>
-
+    <ul>
+        <div class="container-navigation">
+            <a href="#section-one"><button>Home</button></a>
+            <a href="#section-two"><button>CARP</button></a>
+            <a href="#section-three"><button>Typography</button></a>
+            <a href="#section-five"><button>Coding Worksheets</button></a>
+            </div>
+       </ul>
 </html>
