--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/xdh7eqw.css">
+    <link rel="stylesheet" href="https://use.typekit.net/xdh7eqw.css">
     <title>Mads Website</title>
 </head>
 <body>
