--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <h1>Welcome to Maddys First Website</h1>
     <ul>
-        <div class="container-navigation">
-            <a href="#section-one"><button>Home</button></a>
-            <a href="#section-two"><button>CARP</button></a>
-            <a href="#section-three"><button>Typography</button></a>
-            <a href="#section-five"><button>Coding Worksheets</button></a>
+        <div>
+            <button>Home</button>
+            <button>CARP</button>
+            <button>Typography</button>
+            <button>Coding Worksheets</button>
             </div>
        </ul>
 </html>
