--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Welcome to Maddys First Website</h1>
     <ul>
-        <div>
+        <div class="flex-container">
             <button>Home</button>
             <button>CARP</button>
             <button>Typography</button>
