--- a/index.html
+++ b/index.html
@@ -9,13 +9,21 @@
     <title>Mads Website</title>
 </head>
 <body>
-    <h1>Welcome to Maddys First Website</h1>
+    <style>
+        body {
+          background-image: url('magenta colours.jpeg');
+        }
+        </style>
+
+    <h1>Welcome to Maddy's First Website</h1>
     <ul>
         <div class="flex-container">
             <button>Home</button>
             <button>CARP</button>
             <button>Typography</button>
             <button>Coding Worksheets</button>
+            <button>UX</button>
+            <button>Reflection</button>
             </div>
        </ul>
 </html>
