--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <title>Mads Website</title>
 </head>
 <body>
-    <style>
-        body {
-          background-image: url('magenta colours.jpeg');
-        }
-        </style>
+    <video autoplay muted loop id="myVideo">
+        <source src="digi_meandpiper.mp4" type="video/mp4">
+      </video>
 
     <h1>Welcome to Maddy's First Website</h1>
     <ul>
