--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <video autoplay muted loop id="myVideo">
-        <source src="digi_meandpiper.mp4" type="video/mp4">
+        <source src="jack_walking2.mp4" type="video/mp4">
       </video>
 
     <h1>Welcome to Maddy's First Website</h1>
