--- a/index.html
+++ b/index.html
@@ -24,4 +24,11 @@
             <button>Reflection</button>
             </div>
        </ul>
+
+       <p>Hi Hi my name is Maddy and I'm orginally from Sheffield. Woop woop!</p>
+        <p>I bless you with my presence here in Bristol as I work towards 
+    my Digital Media Degree.</p>
+    <p>Enjoy a fairly large video I took of one of my good friends Jack as we walks along a beach where we used to live
+        on Sunshine Beach near Noosa, QLD, Australia
+    </p>
 </html>
