--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
             </div>
        </ul>
 
-       <p>Hi Hi my name is Maddy and I'm orginally from Sheffield. Woop woop!</p>
-        <p>I bless you with my presence here in Bristol as I work towards 
-    my Digital Media Degree.</p>
-    <p>Enjoy a fairly large video I took of one of my good friends Jack as we walks along a beach where we used to live
-        on Sunshine Beach near Noosa, QLD, Australia
-    </p>
+    <div class="me">
+       <p>
+        Hi Hi my name is Maddy and I'm orginally from Sheffield. Woop woop!
+        I bless you with my presence here in Bristol as I work towards 
+        my Digital Media Degree.
+        I have a strong intrest in Graphic and Web design, putting my own art 
+        into projects does get me excited to move through my modules.
+        Enjoy a fairly large video I took of one of my good friends Jack as he walks along
+        Sunshine Beach where we used to live near Noosa, QLD, Australia.
+       </p>
+</div>
 </html>
