--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <button>Reflection</button>
             </div>
        </ul>
-
-    <div class="me">
+<main>
+    <div class="me" id="me">
        <p>
         Hi Hi my name is Maddy and I'm orginally from Sheffield. Woop woop!
         I bless you with my presence here in Bristol as I work towards 
@@ -36,4 +36,5 @@
         Sunshine Beach where we used to live near Noosa, QLD, Australia.
        </p>
 </div>
+</main>
 </html>
