--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/xdh7eqw.css">
     <link rel="stylesheet" href="https://use.typekit.net/xdh7eqw.css">
-    <title>Mads Website</title>
+    <title>Maddy's home page</title>
 </head>
 <body>
     <video autoplay muted loop id="myVideo">
@@ -17,7 +17,7 @@
     <ul>
         <div class="flex-container">
             <button>Home</button>
-            <button>CARP</button>
+           <a href= "carp.html" target="blank"><button>CARP</button></a>
             <button>Typography</button>
             <button>Coding Worksheets</button>
             <button>UX</button>
