--- a/carp.html
+++ b/carp.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,13 +9,16 @@
     <title>CARP page</title>
 </head>
 
+
 <body>
-    <video autoplay muted loop id="myVideo">
-        <source src="jack_walking2.mp4" type="video/mp4">
-      </video>
-      
+    <style>
+        body {
+          background-image: url('mud.jpg');
+        }
+        </style>
+
       <h1>Welcome to Maddy's First Website</h1>
-      
+
       <ul>
         <div class="flex-container">
             <a href="index.html" target="blank"><button>Home</button></a>
