--- a/carp.html
+++ b/carp.html
@@ -21,7 +21,7 @@
 
       <ul>
         <div class="flex-container">
-            <a href="index.html" target="blank"><button>Home</button></a>
+            <button onclick="window.location.href = 'index.html';">Home</button>
             <button>CARP</button>
             <button>Typography</button>
             <button>Coding Worksheets</button>
