--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <ul>
         <div class="flex-container">
             <button>Home</button>
-           <a href= "carp.html" target="blank"><button>CARP</button></a>
+           <button onclick="window.location.href = 'carp.html';">CARP</button></a>
             <button>Typography</button>
             <button>Coding Worksheets</button>
             <button>UX</button>
