--- a/typo.html
+++ b/typo.html
@@ -6,28 +6,21 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/xdh7eqw.css">
     <link rel="stylesheet" href="https://use.typekit.net/xdh7eqw.css">
-    <title>CARP page</title>
+    <title>Maddy's home page</title>
 </head>
-
-
 <body>
-    <style>
-        body {
-          background-image: url('mud dark.jpg');
-        }
-        </style>
+    <video autoplay muted loop id="myVideo">
+        <source src="jack_walking2.mp4" type="video/mp4">
+      </video>
 
-      <h1>Welcome to Maddy's First Website</h1>
-
-      <ul>
+    <h1>Welcome to Maddy's First Website</h1>
+    <ul>
         <div class="flex-container">
-            <button onclick="window.location.href = 'index.html';">Home</button>
-            <button>CARP</button>
+            <button>Home</button>
+           <button onclick="window.location.href = 'carp.html';">CARP</button></a>
             <button>Typography</button>
             <button>Coding Worksheets</button>
             <button>UX</button>
             <button>Reflection</button>
             </div>
        </ul>
-</body>
-</html>
