--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="flex-container">
             <button>Home</button>
            <button onclick="window.location.href = 'carp.html';">CARP</button></a>
-            <button>Typography</button>
+            <button onclick="window.location.href = 'typo.html';">Typography</button>
             <button>Coding Worksheets</button>
             <button>UX</button>
             <button>Reflection</button>
