--- a/carp.html
+++ b/carp.html
@@ -23,7 +23,7 @@
         <div class="flex-container">
             <button onclick="window.location.href = 'index.html';">Home</button>
             <button>CARP</button>
-            <button>Typography</button>
+            <button onclick="window.location.href = 'typo.html';">Typography</button>
             <button>Coding Worksheets</button>
             <button>UX</button>
             <button>Reflection</button>
