--- a/typo.html
+++ b/typo.html
@@ -16,9 +16,9 @@
     <h1>Welcome to Maddy's First Website</h1>
     <ul>
         <div class="flex-container">
-            <button>Home</button>
-           <button onclick="window.location.href = 'carp.html';">CARP</button></a>
-            <button>Typography</button>
+            <button onclick="window.location.href = 'index.html';">Home</button>
+            <button onclick="window.location.href = 'carp.html';">CARP</button></a>
+            <button onclick="window.location.href = 'typo.html';">Typography</button>
             <button>Coding Worksheets</button>
             <button>UX</button>
             <button>Reflection</button>
