--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         I bless you with my presence here in Bristol as I work towards 
         my Digital Media Degree.
         I have a strong intrest in Graphic and Web design, putting my own art 
-        into projects does get me excited to move through my modules.
-        Enjoy a fairly large video I took of one of my good friends Jack as he walks along
+        into projects does get me excited to move through my modules.</p>
+        <p>Enjoy a fairly large video I took of one of my good friends Jack as he walks along
         Sunshine Beach where we used to live near Noosa, QLD, Australia.
        </p>
 </div>
