--- a/typo.html
+++ b/typo.html
@@ -9,9 +9,11 @@
     <title>Maddy's home page</title>
 </head>
 <body>
-    <video autoplay muted loop id="myVideo">
-        <source src="jack_walking2.mp4" type="video/mp4">
-      </video>
+    <style>
+        body {
+          background-image: url('mud dark.jpg');
+        }
+        </style>
 
     <h1>Welcome to Maddy's First Website</h1>
     <ul>
