--- a/carp.html
+++ b/carp.html
@@ -17,7 +17,7 @@
         }
         </style>
 
-      <h1>Welcome to Maddy's First Website</h1>
+      <h1>CARP Posters</h1>
 
       <ul>
         <div class="flex-container">
