--- a/typo.html
+++ b/typo.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/xdh7eqw.css">
     <link rel="stylesheet" href="https://use.typekit.net/xdh7eqw.css">
-    <title>Maddy's home page</title>
+    <title>Typo Page</title>
 </head>
 <body>
     <style>
@@ -15,7 +15,7 @@
         }
         </style>
 
-    <h1>Welcome to Maddy's First Website</h1>
+    <h1>Typography</h1>
     <ul>
         <div class="flex-container">
             <button onclick="window.location.href = 'index.html';">Home</button>
