--- a/typo.html
+++ b/typo.html
@@ -11,7 +11,7 @@
 <body>
     <style>
         body {
-          background-image: url('mud dark.jpg');
+          background-image: url('aarhus bar.jpg');
         }
         </style>
 
