--- a/carp.html
+++ b/carp.html
@@ -13,7 +13,7 @@
 <body>
     <style>
         body {
-          background-image: url('aarhus bar.jpg');
+          background-image: url('mud dark.jpg');
         }
         </style>
 
