--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button>Home</button>
            <button onclick="window.location.href = 'carp.html';">CARP</button></a>
             <button onclick="window.location.href = 'typo.html';">Typography</button>
-            <button>Coding Worksheets</button>
+            <button>Coding</button>
             <button>UX</button>
             <button>Reflection</button>
             </div>
