--- a/carp.html
+++ b/carp.html
@@ -24,7 +24,7 @@
             <button onclick="window.location.href = 'index.html';">Home</button>
             <button>CARP</button>
             <button onclick="window.location.href = 'typo.html';">Typography</button>
-            <button>Coding Worksheets</button>
+            <button>Coding</button>
             <button>UX</button>
             <button>Reflection</button>
             </div>
