--- a/carp.html
+++ b/carp.html
@@ -29,5 +29,11 @@
             <button>Reflection</button>
             </div>
        </ul>
+
+       <div class="section-one">
+
+        <img src="CARP Posters.jpg" alt="Guitar" width="350" height="495">
+
+       </div>
 </body>
 </html>
