--- a/typo.html
+++ b/typo.html
@@ -21,7 +21,7 @@
             <button onclick="window.location.href = 'index.html';">Home</button>
             <button onclick="window.location.href = 'carp.html';">CARP</button></a>
             <button onclick="window.location.href = 'typo.html';">Typography</button>
-            <button>Coding Worksheets</button>
+            <button>Coding</button>
             <button>UX</button>
             <button>Reflection</button>
             </div>
