--- a/carp.html
+++ b/carp.html
@@ -31,8 +31,7 @@
        </ul>
 
        <div class="section-one">
-
-        <img src="CARP Posters.jpg" alt="Guitar" width="350" height="495">
+        <img src="CARP Posters.jpg" class="posters" style="width: 325px, height: 475px">
 
        </div>
 </body>
