--- a/carp.html
+++ b/carp.html
@@ -31,7 +31,7 @@
        </ul>
 
        <div class="section-one">
-        <img src="CARP Posters.jpg" class="posters" style="width: 325px, height: 475px">
+        <img src="CARP Posters.jpg" class="posters" style="width: 325px, height: 475px"></div>
 
        </div>
 </body>
