--- a/carp.html
+++ b/carp.html
@@ -13,7 +13,7 @@
 <body>
     <style>
         body {
-          background-image: url('mud dark.jpg');
+          background-image: url('hands.jpg');
         }
         </style>
 
@@ -31,7 +31,21 @@
        </ul>
 
        <div class="section-one">
-        <img src="CARP Posters.jpg" class="posters" style="width: 325px, height: 475px"></div>
+
+        <img src="CARP Posters.jpg" class="posters" style="width: 325px, height: 475px">
+        <p class="caption"></p>
+        </div>
+
+        <div class="section-one">
+        <img src="CARP Posters2.jpg" class="posters" style="width: 325px, height: 475px">
+        </div>
+
+        <div class="section-one">
+        <img src="CARP Posters3.jpg" class="posters" style="width: 325px, height: 475px">
+        </div>
+
+        <div class="section-one">
+        <img src="CARP Posters4.jpg" class="posters" style="width: 325px, height: 475px">
 
        </div>
 </body>
