--- a/carp.html
+++ b/carp.html
@@ -33,7 +33,12 @@
        <div class="section-one">
 
         <img src="CARP Posters.jpg" class="posters" style="width: 325px, height: 475px">
-        <p class="caption"></p>
+        <h2 class="hposter">REPETITION</h2>
+        <p class="caption">For this poster I thought it would look cool if I used what I learnt in Adobe Illustator
+          when doing the typograpghy systems work, to make the words form around a guitar.
+          This highlights the focus of the poster as it is to premote a film/ music festival.This also
+          meets the aim of repetition as I used the lines formed around the guitar, repeating the title of 
+          'True/False Film Fesitval' continously filling the page.</p>
         </div>
 
         <div class="section-one">
