--- a/carp.html
+++ b/carp.html
@@ -29,10 +29,9 @@
             <button>Reflection</button>
             </div>
        </ul>
-
-       <div class="section-one">
-
-        <img src="CARP Posters.jpg" class="posters" style="width: 325px, height: 475px">
+      <div class= "section-one">
+       <div class="posters">
+        <img src="CARP Posters.jpg" alt= "repetition" style= "width: 100%">
         <h2 class="hposter">REPETITION</h2>
         <p class="caption">For this poster I thought it would look cool if I used what I learnt in Adobe Illustator
           when doing the typograpghy systems work, to make the words form around a guitar.
@@ -41,17 +40,23 @@
           'True/False Film Fesitval' continously filling the page.</p>
         </div>
 
-        <div class="section-one">
-        <img src="CARP Posters2.jpg" class="posters" style="width: 325px, height: 475px">
+        <div class="posters">
+        <img src="CARP Posters2.jpg" alt= "contrast" style= "width: 100%">
+        <h2 class="hposter">CONTRAST</h2>
+        <p class="caption">To meet the aim of contrast I decided to use scale. I started 
+          with drawing the focus to the letters of T and F. Scaling the letters to the whole page
+          you'd think would be the aspect making the poster seem important, however .    
+        </p>
         </div>
 
-        <div class="section-one">
-        <img src="CARP Posters3.jpg" class="posters" style="width: 325px, height: 475px">
+        <div class="posters">
+        <img src="CARP Posters3.jpg" alt= "alignment" style= "width: 100%">
         </div>
 
-        <div class="section-one">
-        <img src="CARP Posters4.jpg" class="posters" style="width: 325px, height: 475px">
+        <div class="posters">
+        <img src="CARP Posters4.jpg" alt= "proximity" style= "width: 100%">
 
        </div>
+      </div>
 </body>
 </html>
