--- a/carp.html
+++ b/carp.html
@@ -45,7 +45,12 @@
         <h2 class="hposter">CONTRAST</h2>
         <p class="caption">To meet the aim of contrast I decided to use scale. I started 
           with drawing the focus to the letters of T and F. Scaling the letters to the whole page
-          you'd think would be the aspect making the poster seem important, however .    
+          you'd think would be the aspect making the poster seem important, however I think real draw in    
+          would be the minimal text within the poster. Just how the front face seems to scream 
+          urgency but when drawn in you aren't greeted with details and details, instead
+          the information you need. Things you always look for: what is it? where? when?
+          I also created contrast in the colours of the T and F whilst also matching the theme
+          within the festivals logo. 
         </p>
         </div>
 
