--- a/carp.html
+++ b/carp.html
@@ -35,7 +35,7 @@
         <h2 class="hposter">REPETITION</h2>
         <p class="caption">For this poster I thought it would look cool if I used what I learnt in Adobe Illustator
           when doing the typograpghy systems work, to make the words form around a guitar.
-          This highlights the focus of the poster as it is to premote a film/ music festival.This also
+          This highlights the focus of the poster as it is to promote a film/ music festival.This also
           meets the aim of repetition as I used the lines formed around the guitar, repeating the title of 
           'True/False Film Fesitval' continously filling the page.</p>
         </div>
@@ -47,7 +47,7 @@
           with drawing the focus to the letters of T and F. Scaling the letters to the whole page
           you'd think would be the aspect making the poster seem important, however I think real draw in    
           would be the minimal text within the poster. Just how the front face seems to scream 
-          urgency but when drawn in you aren't greeted with details and details, instead
+          urgency but when drawn in you aren't greeted with details and details, instead,
           the information you need. Things you always look for: what is it? where? when?
           I also created contrast in the colours of the T and F whilst also matching the theme
           within the festivals logo. 
