--- a/carp.html
+++ b/carp.html
@@ -33,11 +33,13 @@
        <div class="posters">
         <img src="CARP Posters.jpg" alt= "repetition" style= "width: 100%">
         <h2 class="hposter">REPETITION</h2>
-        <p class="caption">For this poster I thought it would look cool if I used what I learnt in Adobe Illustator
-          when doing the typograpghy systems work, to make the words form around a guitar.
+        <p class="caption">For my repetition poster, I thought it would look cool if I used what I learnt in Adobe Illustator
+          when doing the typography systems work, to make the words form around a guitar.
           This highlights the focus of the poster as it is to promote a film/ music festival.This also
           meets the aim of repetition as I used the lines formed around the guitar, repeating the title of 
-          'True/False Film Fesitval' continously filling the page.</p>
+          'True/False Film Fesitval' continously filling the page. This flows stabilty through the 
+          poster, allowing for the information within to be presented as confident and significant. 
+        </p>
         </div>
 
         <div class="posters">
