--- a/carp.html
+++ b/carp.html
@@ -58,6 +58,9 @@
 
         <div class="posters">
         <img src="CARP Posters3.jpg" alt= "alignment" style= "width: 100%">
+        <h2 class="hposter">ALIGNMENT</h2>
+        <p class="caption">
+        </p>
         </div>
 
         <div class="posters">
