--- a/carp.html
+++ b/carp.html
@@ -31,19 +31,18 @@
        </ul>
       <div class= "section-one">
        <div class="posters">
-        <img src="CARP Posters.jpg" alt= "repetition" style= "width: 100%">
         <h2 class="hposter">REPETITION</h2>
         <p class="caption">For my repetition poster, I thought it would look cool if I used what I learnt in Adobe Illustator
           when doing the typography systems work, to make the words form around a guitar.
           This highlights the focus of the poster as it is to promote a film/ music festival.This also
           meets the aim of repetition as I used the lines formed around the guitar, repeating the title of 
           'True/False Film Fesitval' continously filling the page. This flows stabilty through the 
-          poster, allowing for the information within to be presented as confident and significant. 
+          poster, allowing for the information within to be presented as confident and significant.
         </p>
+        <img src="CARP Posters.jpg" alt= "repetition" style= "width: 100%">
         </div>
 
         <div class="posters">
-        <img src="CARP Posters2.jpg" alt= "contrast" style= "width: 100%">
         <h2 class="hposter">CONTRAST</h2>
         <p class="caption">To meet the aim of contrast I decided to use scale. I started 
           with drawing the focus to the letters of T and F. Scaling the letters to the whole page
@@ -54,18 +53,29 @@
           I also created contrast in the colours of the T and F whilst also matching the theme
           within the festivals logo. 
         </p>
+        <img src="CARP Posters2.jpg" alt= "contrast" style= "width: 100%">
         </div>
+      </div>
 
+      <div class= "section-one">
         <div class="posters">
-        <img src="CARP Posters3.jpg" alt= "alignment" style= "width: 100%">
         <h2 class="hposter">ALIGNMENT</h2>
-        <p class="caption">
+        <p class="caption"> Creating the focus of aligntment in this poster meant that I trasnferred
+          skills learnt in the typography task again. I used a grid alignment with my text of 4x4.
+          The grid means the text has a fixed structure giving it that same idea of stability whilst 
+          continuing with a minimalist overview. I also made sure the title was centred within its own 
+          grid and the information to be pushed to the left of the box so that I kept up with the alignment fix.
+          The difference in alignment within the grid also means that there is an equal
+          amount of blank space between grids.  
+
         </p>
+        <img src="CARP Posters3.jpg" alt= "alignment" style= "width: 100%">
         </div>
 
         <div class="posters">
+        <h2 class="hposter">PROXIMITY</h2>
         <img src="CARP Posters4.jpg" alt= "proximity" style= "width: 100%">
-
+        <p class="caption"></p>
        </div>
       </div>
 </body>
