--- a/carp.html
+++ b/carp.html
@@ -39,11 +39,12 @@
           'True/False Film Fesitval' continously filling the page. This flows stabilty through the 
           poster, allowing for the information within to be presented as confident and significant.
         </p>
-        <img src="CARP Posters.jpg" alt= "repetition" style= "width: 100%">
+        <img src="CARP Posters.jpg" alt= "repetition" style= "width: 60%">
         </div>
 
         <div class="posters">
         <h2 class="hposter">CONTRAST</h2>
+        <img src="CARP Posters2.jpg" alt= "contrast" style= "width: 60%">
         <p class="caption">To meet the aim of contrast I decided to use scale. I started 
           with drawing the focus to the letters of T and F. Scaling the letters to the whole page
           you'd think would be the aspect making the poster seem important, however I think real draw in    
@@ -53,14 +54,13 @@
           I also created contrast in the colours of the T and F whilst also matching the theme
           within the festivals logo. 
         </p>
-        <img src="CARP Posters2.jpg" alt= "contrast" style= "width: 100%">
         </div>
       </div>
 
       <div class= "section-one">
         <div class="posters">
         <h2 class="hposter">ALIGNMENT</h2>
-        <p class="caption"> Creating the focus of aligntment in this poster meant that I trasnferred
+        <p class="caption"> Creating the focus of aligntment in this poster meant that I transferred
           skills learnt in the typography task again. I used a grid alignment with my text of 4x4.
           The grid means the text has a fixed structure giving it that same idea of stability whilst 
           continuing with a minimalist overview. I also made sure the title was centred within its own 
@@ -69,14 +69,21 @@
           amount of blank space between grids.  
 
         </p>
-        <img src="CARP Posters3.jpg" alt= "alignment" style= "width: 100%">
+        <img src="CARP Posters3.jpg" alt= "alignment" style= "width: 60%">
         </div>
 
         <div class="posters">
         <h2 class="hposter">PROXIMITY</h2>
-        <img src="CARP Posters4.jpg" alt= "proximity" style= "width: 100%">
-        <p class="caption"></p>
+        <img src="CARP Posters4.jpg" alt= "proximity" style= "width: 60%">
+        <p class="caption">The proximity plays into the principle of alignment too within
+          my poster as I chose to align my text directly underneath the main image. Shrinking my text
+          into the corner of my page easily allows for a close proximity. This means the text
+          is more of a secondary focus, however still maintains its importance through the directness 
+          in the lack of space.   
+        </p>
        </div>
       </div>
 </body>
+
+<footer>Maddy Anderson madeline4.anderson@live.uwe.ac.uk</footer>
 </html>
