--- a/coding.html
+++ b/coding.html
@@ -6,33 +6,31 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/xdh7eqw.css">
     <link rel="stylesheet" href="https://use.typekit.net/xdh7eqw.css">
-    <title>Typo Page</title>
+    <title>CARP page</title>
 </head>
+
+
 <body>
     <style>
         body {
-          background-image: url('aarhus bar.jpg');
+          background-image: url('mud dark.jpg');
         }
         </style>
 
-    <h1>Typography</h1>
-    <ul>
+      <h1>Coding Worksheets</h1>
+
+      <ul>
         <div class="flex-container">
             <button onclick="window.location.href = 'index.html';">Home</button>
-            <button onclick="window.location.href = 'carp.html';">CARP</button></a>
+            <button>CARP</button>
             <button onclick="window.location.href = 'typo.html';">Typography</button>
-            <button onclick="window.location.href = 'coding.html';">Coding Worksheets</button>
+            <button onclick="window.loaction.href = 'coding.html';">Coding Worksheets</button>>Coding</button>
             <button>UX</button>
             <button>Reflection</button>
             </div>
        </ul>
-
-    <div class= "section-typo">
-        <div class= "posters">
-            <h2 class="hposter">AXIL</h2>
-            <p class="caption"></p>  
-            <img src="" alt= "axil" style= "width: 60%">
-        </div> 
-    </div>
+       
 </body>
+
+
 </html>
