--- a/carp.html
+++ b/carp.html
@@ -22,14 +22,14 @@
       <ul>
         <div class="flex-container">
             <button onclick="window.location.href = 'index.html';">Home</button>
-            <button>CARP</button>
+            <button onclick="window.location.href = 'carp.html';">CARP</button>
             <button onclick="window.location.href = 'typo.html';">Typography</button>
             <button>Coding</button>
             <button>UX</button>
             <button>Reflection</button>
             </div>
        </ul>
-       
+
       <div class= "section-one">
        <div class="posters">
         <h2 class="hposter">REPETITION</h2>
