--- a/coding.html
+++ b/coding.html
@@ -22,7 +22,7 @@
       <ul>
         <div class="flex-container">
             <button onclick="window.location.href = 'index.html';">Home</button>
-            <button>CARP</button>
+            <button onclick="window.location.href = 'carp.html';">CARP</button>
             <button onclick="window.location.href = 'typo.html';">Typography</button>
             <button onclick="window.loaction.href = 'coding.html';">Coding Worksheets</button>>Coding</button>
             <button>UX</button>
