--- a/typo.html
+++ b/typo.html
@@ -19,7 +19,7 @@
     <ul>
         <div class="flex-container">
             <button onclick="window.location.href = 'index.html';">Home</button>
-            <button onclick="window.location.href = 'carp.html';">CARP</button></a>
+            <button onclick="window.location.href = 'carp.html';">CARP</button>
             <button onclick="window.location.href = 'typo.html';">Typography</button>
             <button onclick="window.location.href = 'coding.html';">Coding Worksheets</button>
             <button>UX</button>
