--- a/carp.html
+++ b/carp.html
@@ -40,7 +40,7 @@
           'True/False Film Fesitval' continously filling the page. This flows stabilty through the 
           poster, allowing for the information within to be presented as confident and significant.
         </p>
-        <img src="CARP Posters.jpg" alt= "repetition" style= "width: 60%">
+        <img src="CARP Posters test.jpg" alt= "repetition" style= "width: 60%">
         </div>
 
         <div class="posters">
