--- a/typo.html
+++ b/typo.html
@@ -29,9 +29,15 @@
 
     <div class= "section-typo">
         <div class= "posters">
-            <h2 class="hposter">AXIL</h2>
+            <h2 class="hposter">Axil</h2>
             <p class="caption"></p>  
-            <img src="" alt= "axil" style= "width: 60%">
+            <img src="Typography_1.png" alt= "axil" style= "width: 25%">
+        </div> 
+
+        <div class= "posters">
+            <h2 class="hposter">Radial</h2>
+            <p class="caption"></p>  
+            <img src="Typography_2.png" alt= "axil" style= "width: 25%">
         </div> 
     </div>
 </body>
