--- a/typo.html
+++ b/typo.html
@@ -31,14 +31,27 @@
         <div class= "posters">
             <h2 class="hposter">Axil</h2>
             <p class="caption"></p>  
-            <img src="Typography_1.png" alt= "axil" style= "width: 25%">
+            <img src="Typography_1.png" alt= "axil">
         </div> 
 
         <div class= "posters">
             <h2 class="hposter">Radial</h2>
             <p class="caption"></p>  
-            <img src="Typography_2.png" alt= "axil" style= "width: 25%">
+            <img src="Typography_2.png" alt= "axil">
         </div> 
+
+        <div class= "posters">
+            <h2 class="hposter">Dilatational</h2>
+            <p class="caption"></p>  
+            <img src="Typography_3.png" alt= "axil">
+        </div> 
+
+        <div class= "posters">
+            <h2 class="hposter">Grid</h2>
+            <p class="caption"></p>  
+            <img src="Typography_4.png" alt= "axil">
+        </div> 
+
     </div>
 </body>
 </html>
