--- a/typo.html
+++ b/typo.html
@@ -35,21 +35,21 @@
         </div> 
 
         <div class= "posters">
-            <h2 class="hposter">Radial</h2>
-            <p class="caption"></p>  
+            <h2 class="hposter">Radial</h2>   
             <img src="Typography_2.png" alt= "axil">
+            <p class="caption">Using Radial typography gives the text some emotion making it seem more important. It also means that the text is utilising the amount of space in the poster which does also give a sense of importance/ urgency to read. </p>
         </div> 
 
         <div class= "posters">
-            <h2 class="hposter">Dilatational</h2>
-            <p class="caption"></p>  
+            <h2 class="hposter">Dilatational</h2> 
             <img src="Typography_3.png" alt= "axil">
+            <p class="caption">Dilatational focuses more on pattern. Often what draws peoples attention is common patterns rather than blocks of text. Even if the text isn’t the most important on the poster it still gives the impression of importance. </p> 
         </div> 
 
         <div class= "posters">
-            <h2 class="hposter">Grid</h2>
-            <p class="caption"></p>  
+            <h2 class="hposter">Grid</h2>  
             <img src="Typography_4.png" alt= "axil">
+            <p class="caption">Using a Grid alignment focuses on providing structure to your text which gives importance to the information. It makes reading off the poster more satisfying and proves to be more effective in relaying key information. </p>
         </div> 
     </div>
 
