--- a/typo.html
+++ b/typo.html
@@ -55,9 +55,9 @@
 
     <div class="section-typo2">
         <div class= "posters">
-            <h2 class="hposter">Modular</h2>
-            <p class="caption"></p>  
+            <h2 class="hposter">Modular</h2> 
             <img src="Typography_5.png" alt= "axil">
+            <p class="caption">Modular often is compared to the grid typography system. However modular doesn't follow the strict rules allowing for more personal interpretation. In mine I’ve focused on managing the grid alignment but changing the focus to angling the text within the circles.</p>
         </div>
         
         <div class= "posters">
