--- a/typo.html
+++ b/typo.html
@@ -61,21 +61,21 @@
         </div>
         
         <div class= "posters">
-            <h2 class="hposter">Transtional</h2>
-            <p class="caption"></p>  
+            <h2 class="hposter">Transtional</h2> 
             <img src="Typography_6.png" alt= "axil">
+            <p class="caption"></p> 
         </div> 
 
         <div class= "posters">
             <h2 class="hposter">Bilateral</h2>
-            <p class="caption"></p>  
             <img src="Typography_7.png" alt= "axil">
+            <p class="caption">Bilateral designs focus on being centered. Centering is important in typography as it can often create a visual hierarchy to your text. However within posters, mix matching the order of text allows for importance in other ways, e.g. using different typefaces, bold text, size of text. </p>  
         </div> 
 
         <div class= "posters">
             <h2 class="hposter">Random</h2>
-            <p class="caption"></p>  
             <img src="Typography_8.png" alt= "axil">
+            <p class="caption">Different aspects of the poster with no organisation patterns for people to follow but instead provide a puzzle to find the information. Creates a challenging but enjoyable connection to the text.</p>  
         </div> 
     </div>
     
