--- a/typo.html
+++ b/typo.html
@@ -63,7 +63,7 @@
         <div class= "posters">
             <h2 class="hposter">Transtional</h2> 
             <img src="Typography_6.png" alt= "axil">
-            <p class="caption"></p> 
+            <p class="caption">Creates a flow to the text to follow. It doesn’t specify to a rule, it’s still quite random but does match its own structure whilst creating layers to the information's importance.</p> 
         </div> 
 
         <div class= "posters">
