--- a/coding.html
+++ b/coding.html
@@ -24,7 +24,7 @@
             <button onclick="window.location.href = 'index.html';">Home</button>
             <button onclick="window.location.href = 'carp.html';">CARP</button>
             <button onclick="window.location.href = 'typo.html';">Typography</button>
-            <button onclick="window.location.href = 'coding.html';">Coding Worksheets</button>
+            <button class="which-page" onclick="window.location.href = 'coding.html';">Coding Worksheets</button>
             <button>UX</button>
             <button>Reflection</button>
             </div>
