--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Welcome to Maddy's First Website</h1>
     <ul>
         <div class="flex-container">
-            <button>Home</button>
+            <button class="which-page">Home</button>
            <button onclick="window.location.href = 'carp.html';">CARP</button></a>
             <button onclick="window.location.href = 'typo.html';">Typography</button>
             <button onclick="window.location.href = 'coding.html';">Coding Worksheets</button>
