--- a/carp.html
+++ b/carp.html
@@ -22,7 +22,7 @@
       <ul>
         <div class="flex-container">
             <button onclick="window.location.href = 'index.html';">Home</button>
-            <button onclick="window.location.href = 'carp.html';">CARP</button>
+            <button class="which-page" onclick="window.location.href = 'carp.html';">CARP</button>
             <button onclick="window.location.href = 'typo.html';">Typography</button>
             <button onclick="window.location.href = 'coding.html';">Coding Worksheets</button>
             <button>UX</button>
