--- a/carp.html
+++ b/carp.html
@@ -25,7 +25,7 @@
             <button class="which-page" onclick="window.location.href = 'carp.html';">CARP</button>
             <button onclick="window.location.href = 'typo.html';">Typography</button>
             <button onclick="window.location.href = 'coding.html';">Coding Worksheets</button>
-            <button>UX</button>
+            <button onclick="window.location.href = 'ux.html';">UX</button>
             <button>Reflection</button>
             </div>
        </ul>
