--- a/typo.html
+++ b/typo.html
@@ -22,7 +22,7 @@
             <button onclick="window.location.href = 'carp.html';">CARP</button>
             <button class="which-page" onclick="window.location.href = 'typo.html';">Typography</button>
             <button onclick="window.location.href = 'coding.html';">Coding Worksheets</button>
-            <button>UX</button>
+            <button onclick="window.location.href = 'ux.html';">UX</button>
             <button>Reflection</button>
             </div>
        </ul>
