--- a/ux.html
+++ b/ux.html
@@ -24,8 +24,8 @@
             <button onclick="window.location.href = 'index.html';">Home</button>
             <button onclick="window.location.href = 'carp.html';">CARP</button>
             <button onclick="window.location.href = 'typo.html';">Typography</button>
-            <button onclick="window.loaction.href = 'coding.html';">Coding Worksheets</button>
-            <button>UX</button>
+            <button onclick="window.location.href = 'coding.html';">Coding Worksheets</button>
+            <button class="which-page" onclick="window.location.href = 'ux.html';">UX</button>
             <button>Reflection</button>
             </div>
        </ul>
