--- a/ux.html
+++ b/ux.html
@@ -13,11 +13,11 @@
 <body>
     <style>
         body {
-          background-image: url('mud dark.jpg');
+          background-image: url('chilli.jpg');
         }
         </style>
 
-      <h1>Coding Worksheets</h1>
+      <h1>USER EXPERIENCE</h1>
 
       <ul>
         <div class="flex-container">
