--- a/typo.html
+++ b/typo.html
@@ -36,19 +36,19 @@
 
         <div class= "posters">
             <h2 class="hposter">Radial</h2>   
-            <img src="Typography_2.png" alt= "axil">
+            <img src="Typography_2.png" alt= "radial">
             <p class="caption">Using Radial typography gives the text some emotion making it seem more important. It also means that the text is utilising the amount of space in the poster which does also give a sense of importance/ urgency to read. </p>
         </div> 
 
         <div class= "posters">
             <h2 class="hposter">Dilatational</h2> 
-            <img src="Typography_3.png" alt= "axil">
+            <img src="Typography_3.png" alt= "dilatational">
             <p class="caption">Dilatational focuses more on pattern. Often what draws peoples attention is common patterns rather than blocks of text. Even if the text isn’t the most important on the poster it still gives the impression of importance. </p> 
         </div> 
 
         <div class= "posters">
             <h2 class="hposter">Grid</h2>  
-            <img src="Typography_4.png" alt= "axil">
+            <img src="Typography_4.png" alt= "grid">
             <p class="caption">Using a Grid alignment focuses on providing structure to your text which gives importance to the information. It makes reading off the poster more satisfying and proves to be more effective in relaying key information. </p>
         </div> 
     </div>
@@ -56,25 +56,25 @@
     <div class="section-typo2">
         <div class= "posters">
             <h2 class="hposter">Modular</h2> 
-            <img src="Typography_5.png" alt= "axil">
+            <img src="Typography_5.png" alt= "modular">
             <p class="caption">Modular often is compared to the grid typography system. However modular doesn't follow the strict rules allowing for more personal interpretation. In mine I’ve focused on managing the grid alignment but changing the focus to angling the text within the circles.</p>
         </div>
         
         <div class= "posters">
             <h2 class="hposter">Transtional</h2> 
-            <img src="Typography_6.png" alt= "axil">
+            <img src="Typography_6.png" alt= "transitonal">
             <p class="caption">Creates a flow to the text to follow. It doesn’t specify to a rule, it’s still quite random but does match its own structure whilst creating layers to the information's importance.</p> 
         </div> 
 
         <div class= "posters">
             <h2 class="hposter">Bilateral</h2>
-            <img src="Typography_7.png" alt= "axil">
+            <img src="Typography_7.png" alt= "bilateral">
             <p class="caption">Bilateral designs focus on being centered. Centering is important in typography as it can often create a visual hierarchy to your text. However within posters, mix matching the order of text allows for importance in other ways, e.g. using different typefaces, bold text, size of text. </p>  
         </div> 
 
         <div class= "posters">
             <h2 class="hposter">Random</h2>
-            <img src="Typography_8.png" alt= "axil">
+            <img src="Typography_8.png" alt= "random">
             <p class="caption">Different aspects of the poster with no organisation patterns for people to follow but instead provide a puzzle to find the information. Creates a challenging but enjoyable connection to the text.</p>  
         </div> 
     </div>
