--- a/coding.html
+++ b/coding.html
@@ -30,6 +30,20 @@
             </div>
        </ul>
        
+       <div class="section-one">
+        <div class= "cposters">
+            <h2 class="hposter">Worksheet 1-2</h2> 
+            <img src="pizza page ss.jpeg" alt= "pizzapage">
+            <p class="caption"></p> 
+        </div> 
+
+        <div class= "cposters">
+            <h2 class="hposter">Worksheet 1-2</h2> 
+            <img src="flexbox page ss.jpeg" alt= "flexbox">
+            <p class="caption"></p> 
+        </div> 
+       </div>
+       
 </body>
 
 
