--- a/coding.html
+++ b/coding.html
@@ -32,14 +32,14 @@
        
        <div class="section-one">
         <div class= "cposters">
-            <h2 class="hposter">Worksheet 1-2</h2> 
+            <h2 class="hposter">Worksheet 1-3</h2> 
             <img src="pizza page ss.jpeg" alt= "pizzapage">
             <p class="caption"></p> 
         </div> 
 
         <div class= "cposters">
-            <h2 class="hposter">Worksheet 1-2</h2> 
-            <img src="flexbox page ss.jpeg" alt= "flexbox">
+            <h2 class="hposter">Worksheet 4-5</h2> 
+            <img src="flexbox ss.jpeg" alt= "flexbox">
             <p class="caption"></p> 
         </div> 
        </div>
