--- a/typo.html
+++ b/typo.html
@@ -27,6 +27,8 @@
             </div>
        </ul>
 
+       <h2>Hover over the images to see the description:)</h2>
+
     <div class= "section-typo">
         <div class= "container">
             <h2 class="typotitle">Axil</h2> 
