--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
            <button onclick="window.location.href = 'carp.html';">CARP</button></a>
             <button onclick="window.location.href = 'typo.html';">Typography</button>
             <button onclick="window.location.href = 'coding.html';">Coding Worksheets</button>
-            <button onclick="window.location.href = 'ux.html';">UX</button>
-            <button>Reflection</button>
-            </div>
+            <button onclick="window.location.href = 'ux.html';">Reflection</button>
+        </div>
        </ul>
 <main>
     <div class="me" id="me">
